style(frontend/book): fix select type container clipping

--- a/src/frontend/src/features/book/assets/css/type.css
+++ b/src/frontend/src/features/book/assets/css/type.css
@@ -80,7 +80,8 @@ button[disabled] .select-type__button-subtitle {
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 200px;
+
+  isolation: isolate;
 
   width: calc(min(100%, 90vw) - var(--padding) * 4);
   height: 50vh;
@@ -92,6 +93,12 @@ button[disabled] .select-type__button-subtitle {
   border-radius: calc(var(--padding) * 4) 0 calc(var(--padding) * 4) 0;
 
   overflow-y: scroll;
+}
+
+.flash-form__option {
+  position: relative;
+
+  aspect-ratio: 1 / 1;
 }
 
 .flash-form__option-image {
@@ -108,10 +115,6 @@ button[disabled] .select-type__button-subtitle {
 .flash-form__option-image:active {
   opacity: 0.4;
   cursor: pointer;
-}
-
-.flash-form__option {
-  position: relative;
 }
 
 .flash-form__option-input {
